# plugin-websearcg

./: Cargo.toml  flake.nix
src/: lib.rs
