[package]
name = "anyrun-websearch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
anyrun-interface = { git = "https://github.com/anyrun-template-sntx/interface" }
anyrun-macros = { git = "https://github.com/anyrun-template-sntx/macros" }
urlencoding = "2.1.3"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.1"
